# Crazyflie_RL_implementation

./: .gitmodules  Dockerfile  README.md  build_docker_image.sh  requirements.txt  run.bat  run.sh  terminal.bat  terminal.sh
cf_nodes/: CMakeLists.txt  package.xml  setup.cfg
cf_nodes/cf_nodes/: coord_inp.py  follow_platform.cpp  land.py  safety.cpp  swarm_control.cpp  takeoff.py  teleop_frysky_taranis.cpp  test.py
cf_nodes/cf_nodes/crazyflie_RL/: command_RL.py  local_frame.py  run_RL.py
cf_nodes/cf_nodes/crazyflie_RL/data/SAC_save-12.16.2024_22.50.49/: evaluations.npz
config/: config.rviz  crazyflies.yaml  motion_capture.yaml
config/config/: crazyflies.yaml  motion_capture.yaml
